--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "family-lineage-backend",
   "version": "1.0.0",
+  "description": "Family Lineage Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5",
+    "multer": "1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "mysql2": "^3.6.0",
-    "uuid": "^9.0.0"
+    "mysql2": "^3.6.5",
+    "uuid": "^9.0.1"
   }
 }
